<resources>
    <string name="app_name">Lime</string>

    <string name="back_button_description">Back Button</string>
    <string name="close_button_description">Close Button</string>
    <string name="settings_button_description">Settings Button</string>
    <string name="app_icon_description">App Icon</string>
    <string name="addToHome_icon_description">Add to home Icon</string>
    <string name="removeFromHome_icon_description">Remove from home Icon</string>
    <string name="showApp_icon_description">Show app Icon</string>
    <string name="hideApp_icon_description">Hide app Icon</string>
    <string name="showAppInfo_icon_description">Show app info Icon</string>
    <string name="uninstall_icon_description">Uninstall Icon</string>
    <string name="moveUp_icon_description">Move up Icon</string>
    <string name="moveDown_icon_description">Move down Icon</string>
    <string name="renameApp_icon_description">Rename Icon</string>
    <string name="recoverOriginalName_icon_description">Recover original name Icon</string>
    <string name="reorder_icon_description">Reorder home apps Icon</string>


    <string name="settings_title">Settings</string>
    <string name="settings_dateFormat">Date format</string>
    <string name="settings_timeFormat">Time format</string>
    <string name="settings_autoShowKeyboard">Auto show keyboard</string>
    <string name="settings_autoOpenApps">Auto open apps</string>
    <string name="settings_iconsInHome">Show icons in home</string>
    <string name="settings_iconsInDrawer">Show icons in drawer</string>
    <string name="settings_showSearchBar">Show search bar</string>
    <string name="settings_showAlphabet">Show alphabet filter</string>
    <string name="settings_showHiddenApps">Show hidden apps</string>
    <string name="settings_blackText">Use black text</string>
    <string name="settings_dimBackground">Dim wallpaper</string>
    <string name="settings_dailyWallpaper">Update wallpaper daily</string>
    <string name="settings_timeAppLaunch">Choose app to open on clock click</string>
    <string name="settings_dateAppLaunch">Choose app to open on date click</string>

    <string name="contextMenu_addToHome">Add to Home</string>
    <string name="contextMenu_removeFromHome">Remove from Home</string>
    <string name="contextMenu_hideApp">Hide app</string>
    <string name="contextMenu_showApp">Show app</string>
    <string name="contextMenu_appInfo">App info</string>
    <string name="contextMenu_uninstall">Uninstall</string>
    <string name="contextMenu_moveUp">Move up</string>
    <string name="contextMenu_moveDown">Move down</string>
    <string name="contextMenu_renameApp">Rename</string>
    <string name="contextMenu_reorder">Reorder home apps</string>


    <string name="renameMenu_hint">Rename to</string>
    <string name="renameMenu_submit">Submit</string>
    <string name="renameMenu_recoverOriginalName">Recover original name</string>


    <string name="appListMenu_title">Choose app</string>


    <string name="reorderMenu_title">Reorder home apps</string>


    <string name="drawer_searchHint">Search Apps</string>


    <string name="placeholder_time">19:35</string>
    <string name="placeholder_date">Monday, 23 August</string>

</resources>