<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/appLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingTop="12dp"
    android:paddingBottom="12dp">

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginEnd="18dp"
        android:contentDescription="@string/app_icon_description"
        android:src="@mipmap/main_icon" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/montserrat"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="19sp" />

    <ImageButton
        android:id="@+id/reorderMenu_moveDownButton"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="18dp"
        android:background="@drawable/icon_arrow_down"
        android:contentDescription="@string/moveDown_icon_description" />

    <ImageButton
        android:id="@+id/reorderMenu_moveUpButton"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="18dp"
        android:background="@drawable/icon_arrow_up"
        android:contentDescription="@string/moveUp_icon_description" />


    <ImageButton
        android:id="@+id/reorderMenu_space"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="18dp"
        android:alpha="0.0"
        android:background="@drawable/icon_arrow_up"
        android:contentDescription="@string/moveUp_icon_description" />

</LinearLayout>