<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_popup_window"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/contextMenu_titleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="32dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/appIcon"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginEnd="18dp"
                android:contentDescription="@string/app_icon_description"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/appName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/settingsButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="18dp"
                android:background="@drawable/icon_settings"
                android:contentDescription="@string/settings_button_description" />

            <ImageButton
                android:id="@+id/closeContextMenuButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="18dp"
                android:background="@drawable/icon_close"
                android:contentDescription="@string/close_button_description" />

        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/items_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/contextMenu_titleBar">

            <com.bosphere.fadingedgelayout.FadingEdgeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fel_edge="bottom|top"
                app:fel_size_bottom="14dp"
                app:fel_size_top="14dp"
                app:layout_constraintTop_toTopOf="parent">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toStartOf="@+id/guidelineV2"
                        app:layout_constraintStart_toStartOf="@+id/guidelineV1"
                        app:layout_constraintTop_toTopOf="@+id/guidelineH1">


                        <LinearLayout
                            android:id="@+id/contextMenu_moveUp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingHorizontal="16dp"
                            android:paddingVertical="12dp"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageButton
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:layout_marginEnd="18dp"
                                android:background="@drawable/icon_arrow_up"
                                android:contentDescription="@string/moveUp_icon_description" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/montserrat"
                                android:singleLine="true"
                                android:text="@string/contextMenu_moveUp"
                                android:textColor="@color/white"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/contextMenu_moveDown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingHorizontal="16dp"
                            android:paddingVertical="12dp"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageButton
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:layout_marginEnd="18dp"
                                android:background="@drawable/icon_arrow_down"
                                android:contentDescription="@string/moveDown_icon_description" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/montserrat"
                                android:singleLine="true"
                                android:text="@string/contextMenu_moveDown"
                                android:textColor="@color/white"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/contextMenu_addToHome"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingHorizontal="16dp"
                            android:paddingVertical="12dp"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageButton
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:layout_marginEnd="18dp"
                                android:background="@drawable/icon_home"
                                android:contentDescription="@string/addToHome_icon_description" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/montserrat"
                                android:singleLine="true"
                                android:text="@string/contextMenu_addToHome"
                                android:textColor="@color/white"
                                android:textSize="18sp" />
                        </LinearLayout>


                        <LinearLayout
                            android:id="@+id/contextMenu_removeFromHome"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingHorizontal="16dp"
                            android:paddingVertical="12dp"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageButton
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:layout_marginEnd="18dp"
                                android:background="@drawable/icon_close"
                                android:contentDescription="@string/removeFromHome_icon_description" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/montserrat"
                                android:singleLine="true"
                                android:text="@string/contextMenu_removeFromHome"
                                android:textColor="@color/white"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/contextMenu_renameApp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingHorizontal="16dp"
                            android:paddingVertical="12dp"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageButton
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:layout_marginEnd="18dp"
                                android:background="@drawable/icon_rename"
                                android:contentDescription="@string/renameApp_icon_description" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/montserrat"
                                android:singleLine="true"
                                android:text="@string/contextMenu_renameApp"
                                android:textColor="@color/white"
                                android:textSize="18sp" />
                        </LinearLayout>


                        <LinearLayout
                            android:id="@+id/contextMenu_showApp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingHorizontal="16dp"
                            android:paddingVertical="12dp"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageButton
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:layout_marginEnd="18dp"
                                android:background="@drawable/icon_show"
                                android:contentDescription="@string/showApp_icon_description" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/montserrat"
                                android:singleLine="true"
                                android:text="@string/contextMenu_showApp"
                                android:textColor="@color/white"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/contextMenu_hideApp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingHorizontal="16dp"
                            android:paddingVertical="12dp"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageButton
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:layout_marginEnd="18dp"
                                android:background="@drawable/icon_hide"
                                android:contentDescription="@string/hideApp_icon_description" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/montserrat"
                                android:singleLine="true"
                                android:text="@string/contextMenu_hideApp"
                                android:textColor="@color/white"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/contextMenu_appInfo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingHorizontal="16dp"
                            android:paddingVertical="12dp"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageButton
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:layout_marginEnd="18dp"
                                android:background="@drawable/icon_info"
                                android:contentDescription="@string/showAppInfo_icon_description" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/montserrat"
                                android:singleLine="true"
                                android:text="@string/contextMenu_appInfo"
                                android:textColor="@color/white"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/contextMenu_uninstall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingHorizontal="16dp"
                            android:paddingVertical="12dp"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageButton
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:layout_marginEnd="18dp"
                                android:background="@drawable/icon_uninstall"
                                android:contentDescription="@string/uninstall_icon_description" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/montserrat"
                                android:singleLine="true"
                                android:text="@string/contextMenu_uninstall"
                                android:textColor="@color/white"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>
            </com.bosphere.fadingedgelayout.FadingEdgeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/divider0"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@+id/items_container" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>