<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_popup_window"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/renameMenu_titleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="32dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/appIcon"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginEnd="18dp"
                android:contentDescription="@string/app_icon_description"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/appName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/closeRenameMenuButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="18dp"
                android:background="@drawable/icon_close"
                android:contentDescription="@string/close_button_description" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/inputContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/renameMenu_titleBar">

            <EditText
                android:id="@+id/renameBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="none"
                android:background="@drawable/background_search_bar"
                android:drawableStart="@drawable/icon_rename"
                android:drawablePadding="12dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/renameMenu_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white_low"
                android:textSize="18sp" />


            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:background="@android:color/transparent" />

            <LinearLayout
                android:id="@+id/renameMenu_recoverOriginalName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="12dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="18dp"
                    android:background="@drawable/icon_recover"
                    android:contentDescription="@string/recoverOriginalName_icon_description" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat"
                    android:singleLine="true"
                    android:text="@string/renameMenu_recoverOriginalName"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/divider0"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@+id/inputContainer" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>